# pi_webcam

./: .gitignore  CLAUDE.md  PLAN.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
config/: mediamtx.yml  pi-webcam.env.example
deploy/: install.sh  logrotate.conf  mediamtx.service  pi-webcam.service
src/pi_webcam/: __init__.py  capture.py  config.py  database.py  main.py  models.py  retention.py  server.py  thumbnails.py
static/: app.js  index.html  style.css
tests/: conftest.py  test_capture.py  test_config.py  test_database.py  test_integration.py  test_models.py  test_retention.py  test_server.py  test_thumbnails.py
